test/spec_vectors/table/ok/module_32.wat
(module (global (export "g") (ref $f) (ref.func $f)) (type $f (func)) (func $f))