test/spec_vectors/table/fail/module_35.wat
(module (type $f (func)) (table 0 (ref $f)))